fixing album covers so they dont crop

--- a/style.css
+++ b/style.css
@@ -94,6 +94,11 @@ section.homepagephotos {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+.albumcovers img {
+    object-fit: contain;
+    height: auto;
+}
+
 a{
     color: cornflowerblue;
     text-decoration: none;
